--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "dev:db:rm": "docker compose rm dev-db -s -f -v",
+    "dev:db:up": "docker compose up dev-db -d",
+    "dev:dev:restart": "npm run dev:db:rm && npm run dev:db:up && node -e \"setTimeout(() => process.exit(0), 1000)\" && npm run prisma:dev:deploy",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -27,8 +31,10 @@
     "argon2": "^0.30.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "yarn-run-all": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
